-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.7.0-rc1
-
Ubuntu 17.10 64 bit
-
b1d3eee42d5bca4316aaf32f4697f5defe53d3a7 (qt-creator/qt-creator/master) 0eb65f72110c883c29d1966a1d67c796ba2e8214 (qt-creator/qt-creator/4.14)
Open a qmake-based project which does not have a saved configuration.
You will see the "Configure Project" page. For configuring the project, you have to click the "Configure Project" button using the mouse.
"Configure Project" should be the default button so you can trigger it by pressing "Enter" or "Space".
For Gerrit Dashboard: QTCREATORBUG-20720 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
320460,2 | ProjectExplorer: Add shortcut to "Configure Project" | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
320476,2 | ProjectExplorer: Set focus to TargetSetupPage when shown | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
320589,1 | ProjectExplorer: Add shortcut to "Configure Project" | 4.14 | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 |
320590,1 | ProjectExplorer: Set focus to TargetSetupPage when shown | 4.14 | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 |
321167,2 | ProjectExplorer: Add shortcut to "Configure Project" | 4.14 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
321168,2 | ProjectExplorer: Set focus to TargetSetupPage when shown | 4.14 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |